# pipestat

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  MANIFEST.in  README.md  RECIPES.md  codecov.yml  mkdocs.yml  pipestat_schema_demo.yaml  pyproject.toml  results_file.yaml  setup.py  update-usage-docs.sh  update_api_docs.sh
.github/workflows/: black.yml  cli-coverage.yml  python-publish.yml  run-pytest.yml
docs/: README.md  api_docs.md  backends.md  changelog.md  config.md  configuration.md  contributing.md  db_config.md  env_vars.md  install.md  pipestat_specification.md  schema.md  usage.md
docs/autodoc_build/: pipestat.md
docs_jupyter/: api_quickstart.ipynb  cli.ipynb  cli.md  python_api.ipynb
example_output_schemas/: pipestat_schema_demo.yaml  sample_output_schema_generic.yaml
pipestat/: __init__.py  __main__.py  _version.py  abstract.py  argparser.py  backend.py  cli.py  const.py  demo.py  exceptions.py  helpers.py  html_reports_pipestat.py  infer.py  parsed_schema.py  parsed_schema_db.py  pipestat.py  pipestat_dirver.py  pipestat_orm.py  reports.py
pipestat/backends/: abstract.py  dbbackend.py  filebackend.py
pipestat/jinja_templates/: derived_table.html  footer.html  gallery.html  glossary.html  glossary_table.html  index.html  navbar_links.html  object.html  project_object.html  sample.html  status.html
pipestat/pipestatreader/: reader.py
pipestat/reader/: reader.py
pipestat/schemas/: pipestat_config_schema.yaml  status_schema.yaml  status_table_schema.yaml
pipestatreader/: README.md  reader.py
requirements/: requirements-all.txt  requirements-db-backend.txt  requirements-doc.txt  requirements-pephub-backend.txt  requirements-test.txt
tests/: conftest.py  demo_pipestat_output_schema.yaml  interactive.txt  test_analysis_ergonomics.py  test_bug_fixes.py  test_cli.py  test_db_only_mode.py  test_dual_manager.py  test_empty_record_identifier.py  test_env_vars.py  test_force_overwrite.py  test_history.py  test_html_reports.py  test_init.py  test_init_errors.py  test_multi_project_db.py  test_multi_result_files.py  test_parsed_schema.py  test_pephub.py  test_pipestat.py  test_profile_parsing.py  test_project_record_identifier.py  test_record_identifier_setter.py  test_remove.py  test_report_retrieve.py  test_round_trips.py  test_schema_errors.py  test_select_records.py  test_shared_schema_keys.py  test_status.py  test_timestamps.py
tests/data/: config.yaml  config_no_schema.yaml  config_no_schema_file_output.yaml  config_pephub_url.yaml  config_sqllite.yaml  custom_status_schema.yaml  custom_status_schema_2.yaml  db.yaml  output_schema.yaml  output_schema_as_JSON_schema.yaml  output_schema_html_report.yaml  results_docs_example.yaml  results_file.yaml  results_file_2.yaml  sample_output_schema.yaml  sample_output_schema__with_project_with_samples_with_status.yaml  sample_output_schema__with_project_with_samples_without_status.yaml  sample_output_schema__with_project_without_samples_with_status.yaml  sample_output_schema__with_project_without_samples_without_status.yaml  sample_output_schema__without_project_with_samples_with_status.yaml  sample_output_schema__without_project_with_samples_without_status.yaml  sample_output_schema__without_project_without_samples_with_status.yaml  sample_output_schema_highlight.yaml  sample_output_schema_recursive.yaml  sample_output_schema_sqlite.yaml  sample_output_schema_with_index.yaml  test_results_1.yaml  (+1 more)
(+10 files in other folders)
