[project]
name = "pipestat"
version = "0.13.1"
description = "A pipeline results reporter"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Michal Stolarczyk" },
    { name = "Nathan Sheffield" },
    { name = "Donald Campbell" },
]
keywords = ["pipeline", "results", "reporting", "pipeline results", "workflow", "metadata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
dependencies = [
    "jsonschema",
    "logmuse>=0.2.5",
    "pyyaml",
    "ubiquerg>=0.9.1",
    "yacman>=1.0.0",
    "eido",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/pepkit/pipestat"

[project.scripts]
pipestat = "pipestat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dbbackend = [
    "psycopg>=3.1.13",
    "pydantic>=2.5.3,<3.0.0",
    "sqlmodel>=0.0.14",
]
pipestatreader = [
    "fastapi",
    "uvicorn",
]
test = [
    "pytest>=4.6.9",
    "pytest-cov>=2.8.1",
    "coverage",
]

[tool.pytest.ini_options]
addopts = "-rfE"
testpaths = ["tests"]
markers = [
    "pephub: tests that require PEPhub login (run with --pephub)",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["pipestat"]
